--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -9,8 +9,8 @@
   /* --content: rgba(113, 103, 91, 0.85); */
    /* コードのハイライトや背景色に使われる可能性があります。 */
   /* --hljs-bg: #34231B; */
-  /* おそらく, トップページの背景色のみ */
-  --code-bg: #f0f7ff;
+  /* 記事ページの背景色, 目次やフッターの背景色 */
+  --code-bg: #f5fAff;
    /* 枠線の色 */
   /* --border: #fdfaf5; */
    /* 全体的なテーマカラー */
