--- a/layouts/shortcodes/k100-title-s.html
+++ b/layouts/shortcodes/k100-title-s.html
@@ -1,1 +1,1 @@
-{{ .Site.Params.k100_rsql }}{{ .Site.Params.k100_site }}（{{ .Site.Params.k100_suffix_s }}
+{{ .Site.Params.k100_rsql }}{{ .Site.Params.k100_site }}（{{ .Site.Params.k100_suffix_s }}）
