--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,10 +1,18 @@
 /* PaperMod の配色変更 */
-/* :root { */
+:root {
 /* --code-bg: rgb(245, 245, 245); */
 /* --code-bg: #F5F5F5; */
-/* --code-bg: #E5F5FF; */
+/* --code-bg: #F0F5FF; */
+/* --code-bg: #F0FCFF; */
+/* --code-bg: #F4FCFF; */
+/* --code-bg: #ECF6FF; */
+--code-bg: #F0F8FF;
 /* --primary: rgb(30, 30, 30); */
-/* --primary: rgb(70, 20, 0); */
+/* --primary: rgb(40, 10, 0); */
+/* --primary: rgb(47, 25, 0); */
+/* --primary: rgb(52, 25, 0); */
+--primary: rgb(10, 10, 50);
+/* --primary: rgb(0, 0, 70); */
 /* --content: rgb(31, 31, 31); */
 /*   
   --entry: #fbf7ef;
@@ -15,8 +23,7 @@
   --hljs-bg: #34231B;
   --border: #fdfaf5;
   --theme: #fbf7ef; */
-
-/* } */
+}
 
 /* 
 .dark {
@@ -48,6 +55,29 @@
 .post-content li ul {
   margin-bottom: 0;
 }
+
+/* chroma (Hugo の構文ハイライト) */
+.chroma {
+  background-color: unset;
+}
+
+/* PaperMod custom styles for demo site */
+.twitter-tweet {
+  margin: auto;
+}
+
+iframe {
+  border-radius: var(--radius) !important;
+}
+
+.home-info ul {
+  padding-inline-start: 20px;
+}
+
+/* 
+.entry-cover img {
+  border: 1px solid var(--border);
+} */
 
 /* アラート全体のスタイル */
 /* 
