--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -6,29 +6,98 @@
 /* --code-bg: #F0FCFF; */
 /* --code-bg: #F4FCFF; */
 /* --code-bg: #ECF6FF; */
---code-bg: #F0F8FF;
+  --code-bg: #F0F8FF;
 /* --primary: rgb(30, 30, 30); */
-/* --primary: rgb(52, 25, 0); */
-/* --primary: rgb(20, 20, 70); */
-/* --primary: rgb(60, 60, 100); */
-  --primary: rgb(80, 80, 110);
+  /* --primary: rgb(80, 80, 110); */
+  --primary: rgb(75, 75, 100);
 /* --content: rgb(31, 31, 31); */
-/* --content: rgb(70, 70, 70); */
---content: rgb(100, 100, 100);
-/*   
-  --entry: #fbf7ef;
-  --primary: rgba(113, 103, 91, 1.00);
-  --secondary: rgba(113, 103, 91, 0.95);
-  --tertiary: rgba(113, 103, 91, 0.50);
-  --content: rgba(113, 103, 91, 0.85);
-  --hljs-bg: #34231B;
-  --border: #fdfaf5;
-  --theme: #fbf7ef; */
+  --content: rgb(85, 85, 85);
+  /* --theme: rgb(255, 255, 255);
+  --entry: rgb(255, 255, 255);
+  --primary: rgb(30, 30, 30);
+  --secondary: rgb(108, 108, 108);
+  --tertiary: rgb(214, 214, 214);
+  --code-block-bg: rgb(28, 29, 33);
+  --border: rgb(238, 238, 238); */
 }
 
 /* 
 .dark {
 } */
+
+/* 本文の line-height (default: 1.6) */
+.post-content {
+  line-height: 1.8;
+}
+
+.entry-content {
+  line-height: 1.8;
+}
+
+/* post-entry.css */
+/* 見出しの line-height (default: 1.2-1.3) */
+h1,
+h2,
+h3 {
+  line-height: 1.4;
+}
+
+.entry-header h2 {
+  /* default: 1.3 */
+  line-height: 1.4;
+}
+
+.first-entry .entry-header h1 {
+  /* default: 1.3 */
+  line-height: 1.4;
+}
+
+/* post-single.css */
+/* post contents の H2 に border を引く */
+.post-content h2 {
+  /* margin: 32px auto 24px; */
+  margin: 45px auto 24px;
+  font-size: 32px;
+  border-bottom: 1.7px solid #C0C0E0; /* アンダーラインの太さと色 */
+  padding-bottom: 5px; /* アンダーラインと文字の間隔 */
+}
+
+.post-content h3 {
+  font-size: 24px;
+  margin: 24px 0 16px;
+}
+
+.post-content h4 {
+  font-size: 16px;
+  margin: 24px 0 16px;
+}
+
+.post-content h5 {
+  font-size: 14px;
+  margin: 24px 0 16px;
+}
+
+.post-content h6 {
+  font-size: 12px;
+  margin: 24px 0 16px;
+}
+
+
+/* Archive */
+.archive-posts {
+  width: 120%; /* default: 100% */
+  font-size: 16px;
+  /* background: #FFFFFF */
+}
+
+.archive-entry {
+  position: relative;
+  padding: 5px;
+  padding-left: 8pt;
+  padding-right: 8pt;
+  margin: 10px 0;
+  background: #FFFFFF
+}
 
 .not-found {
   position: absolute;
@@ -42,6 +111,7 @@
   font-weight: 300;
 }
 
+/* 404.html */
 .not-found a {
   color: #3498db; /* リンクテキストの色を設定（青色） */
 }
