--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -19,6 +19,7 @@
   --tertiary: rgb(214, 214, 214);
   --code-block-bg: rgb(28, 29, 33);
   --border: rgb(238, 238, 238); */
+  /* archive-entry-background */
 }
 
 /* 
@@ -36,27 +37,28 @@
 
 /* post-entry.css */
 /* 見出しの line-height (default: 1.2-1.3) */
-h1,
+/* h1,
 h2,
 h3 {
   line-height: 1.4;
-}
+} */
 
-.entry-header h2 {
-  /* default: 1.3 */
+/* default: 1.3 */
+/* .entry-header h2 {
   line-height: 1.4;
-}
+} */
 
-.first-entry .entry-header h1 {
-  /* default: 1.3 */
+/* default: 1.3 */
+/* .first-entry .entry-header h1 {
   line-height: 1.4;
-}
+} */
 
 /* post-single.css */
 /* post contents の H2 に border を引く */
 .post-content h2 {
   /* margin: 32px auto 24px; */
-  margin: 45px auto 24px;
+  /* auto は width が設定されると左右中央揃えになる */
+  margin: 45px auto 24px; /* 上部, 左右, 下部 */
   font-size: 32px;
   border-bottom: 1.7px solid #C0C0E0; /* アンダーラインの太さと色 */
   padding-bottom: 5px; /* アンダーラインと文字の間隔 */
@@ -82,7 +84,6 @@ h3 {
   margin: 24px 0 16px;
 }
 
-
 /* Archive */
 .archive-posts {
   width: 120%; /* default: 100% */
@@ -96,7 +97,9 @@ h3 {
   padding-left: 8pt;
   padding-right: 8pt;
   margin: 10px 0;
-  background: #FFFFFF
+  /* background: #FFFFFF; */
+  /* background: var(--theme); */
+  background: var(--entry);
 }
 
 .not-found {
