--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -73,7 +73,8 @@ h3 {
 .post-content h4 {
   /* font-size: 16px; */
   font-size: 18px;
-  margin: 24px 0 16px;
+  /* margin: 24px 0 16px; */
+  margin: 26px 0 16px;
 }
 
 .post-content h5 {
@@ -137,7 +138,7 @@ h3 {
 /* chroma (Hugo の構文ハイライト) */
 .chroma {
   background-color: unset;
-  margin: 0px 0 26px;
+  margin: 0px 0 26px !important; 
 }
 
 /* PaperMod custom styles for demo site */
