--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -37,21 +37,24 @@
 
 /* post-entry.css */
 /* 見出しの line-height (default: 1.2-1.3) */
-/* h1,
+h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.4;
-} */
+}
 
 /* default: 1.3 */
-/* .entry-header h2 {
+.entry-header h2 {
   line-height: 1.4;
-} */
+}
 
 /* default: 1.3 */
-/* .first-entry .entry-header h1 {
+.first-entry .entry-header h1 {
   line-height: 1.4;
-} */
+}
 
 /* post-single.css */
 /* post contents の H2 に border を引く */
