--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -196,3 +196,28 @@ blockquote.alert {
   /* border-left: 5px solid #8bc34a !important; */
   border-left: 5px solid #afc300 !important;
 }
+
+.related-posts {
+  margin-top: 50pt;
+  padding: 12pt;
+  background-color: var(--code-bg); 
+  border-radius: 8px;
+}
+.related-posts h2 {
+  font-size: 20pt;
+  margin-bottom: 18pt;
+}
+.related-posts ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+.related-posts li {
+  margin-bottom: 0.5em;
+}
+
+.related-posts a {
+  text-decoration: none;
+}
+.related-posts a:hover {
+  text-decoration: underline;
+}
