--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -51,30 +51,30 @@
     </ul>
 
     {{/* katsu: 関連コンテンツ */}}
+    {{- $limit := .Site.Params.related.limit | default 5 -}}
+    {{- $related := .Site.RegularPages.Related . | first $limit -}}
+    {{- with $related -}}
     <div class="related-posts">
-      {{- $limit := .Site.Params.related.limit -}}
-      {{- $related := .Site.RegularPages.Related . | first $limit -}}
-      {{- with $related -}}
-      <h2>関連記事</h2>
-        <ul>
-          {{- range $i, $p := . -}}
-            <li>
-              <a href="{{ .RelPermalink }}">{{- .LinkTitle -}}</a>
-              {{- with .HeadingsFiltered -}}
-                <ul>
-                  {{- range . -}}
-                    {{- $link := printf "%s#%s" $p.RelPermalink .ID | safeURL -}}
-                    <li>
-                      <a href="{{ $link }}">{{- .Title -}}</a>
-                    </li>
-                  {{- end -}}
-                </ul>
+    <h2>関連記事</h2>
+      <ul>
+        {{- range $i, $p := . -}}
+          <li>
+            <a href="{{ .RelPermalink }}">{{- .LinkTitle -}}</a>
+            {{- with .HeadingsFiltered -}}
+              <ul>
+                {{- range . -}}
+                  {{- $link := printf "%s#%s" $p.RelPermalink .ID | safeURL -}}
+                  <li>
+                    <a href="{{ $link }}">{{- .Title -}}</a>
+                  </li>
                 {{- end -}}
-            </li>
-            {{- end -}}
-        </ul>
-        {{- end -}}
+              </ul>
+              {{- end -}}
+          </li>
+          {{- end -}}
+      </ul>
     </div>
+    {{- end -}}
 
     {{- if (.Param "ShowPostNavLinks") }}
     {{- partial "post_nav_links.html" . }}
