--- a/layouts/testglossary/list.html
+++ b/layouts/testglossary/list.html
@@ -1,58 +1,81 @@
 {{- define "main" }}
 
-<header class="page-header">
-  <h1>
-    {{ .Title }}
-    {{- if (.Param "ShowRssButtonInSectionTermList") }}
-    {{- $rss := (.OutputFormats.Get "rss") }}
-    {{- if (eq .Kind `page`) }}
-    {{- $rss = (.Parent.OutputFormats.Get "rss") }}
+<article class="post-single">
+  <header class="post-header">
+    {{ partial "breadcrumbs.html" . }}
+    <h1 class="post-title entry-hint-parent">
+      {{ .Title }}
+      {{- if .Draft }}
+      <span class="entry-hint" title="Draft">
+        <svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" fill="currentColor">
+          <path
+            d="M160-410v-60h300v60H160Zm0-165v-60h470v60H160Zm0-165v-60h470v60H160Zm360 580v-123l221-220q9-9 20-13t22-4q12 0 23 4.5t20 13.5l37 37q9 9 13 20t4 22q0 11-4.5 22.5T862.09-380L643-160H520Zm300-263-37-37 37 37ZM580-220h38l121-122-18-19-19-18-122 121v38Zm141-141-19-18 37 37-18-19Z" />
+        </svg>
+      </span>
+      {{- end }}
+    </h1>
+    {{- if .Description }}
+    <div class="post-description">
+      {{ .Description }}
+    </div>
     {{- end }}
-    {{- with $rss }}
-    <a href="{{ .RelPermalink }}" title="RSS" aria-label="RSS">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-        stroke-linecap="round" stroke-linejoin="round" height="23">
-        <path d="M4 11a9 9 0 0 1 9 9" />
-        <path d="M4 4a16 16 0 0 1 16 16" />
-        <circle cx="5" cy="19" r="1" />
-      </svg>
-    </a>
+    {{- if not (.Param "hideMeta") }}
+    <div class="post-meta">
+      {{- partial "post_meta.html" . -}}
+      {{- partial "translation_list.html" . -}}
+      {{- partial "edit_post.html" . -}}
+      {{- partial "post_canonical.html" . -}}
+    </div>
     {{- end }}
-    {{- end }}
-  </h1>
-  {{- if .Description }}
-  <div class="post-description">
-    {{ .Description }}
-  </div>
+  </header>
+  {{- $isHidden := (.Param "cover.hiddenInSingle") | default (.Param "cover.hidden") | default false }}
+  {{- partial "cover.html" (dict "cxt" . "IsSingle" true "isHidden" $isHidden) }}
+  {{- if (.Param "ShowToc") }}
+  {{- partial "toc.html" . }}
   {{- end }}
-</header>
 
-<p>当ページのレイアウトファイル: </p>
-<p>layouts/glossary/list.html</p>
-<br>
-<p>コンテンツファイルの内容: </p>
-<br>
-{{ .Content }}
-<br>
+  {{- if .Content }}
+  <div class="post-content">
+    <h2>当ページのレイアウトファイル </h2>
+    <p>layouts/glossary/list.html</p>
+    <h2>コンテンツファイルの内容</h2>
+    {{ .Content }}
 
-<p>shortcode を .RenderString で出力: </p>
-<p>
-  {{ $shortcode := printf "{{< test-shortcode-1 >}}" }}
-  {{ .RenderString $shortcode }}
-</p>
-<p>
-{{ $url := "https://example.com" }}
-{{ $text := "これはショートコード: href-target-blank" }}
-{{ $shortcode := printf "{{< href-target-blank url=\"%s\" text=\"%s\" >}}" $url $text }}
-{{ .RenderString $shortcode }}
-</p>
-<br>
+    <h2>shortcode を .RenderString で出力</h2>
+    <p>
+    {{ $url := "https://example.com" }}
+    {{ $text := "これはショートコード: href-target-blank" }}
+    {{ $shortcode := printf "{{< href-target-blank url=\"%s\" text=\"%s\" >}}" $url $text }}
+    {{ .RenderString $shortcode }}
+    </p>
+    
+    <h2>各コンテンツの内容一覧</h2>
+    <dl>
+      {{ range .Pages }}
+        <dt>{{ .Title }}</dt>
+        <dd>{{ .Content }}</dd>
+      {{ end }}
+    </dl> 
 
-<dl>
-  {{ range .Pages }}
-    <dt>{{ .Title }}</dt>
-    <dd>{{ .Content }}</dd>
-  {{ end }}
-</dl> 
+  </div> {{/* <div class="post-content"> */}}
+  {{- end }}
 
-{{- end }}{{- /* end main */ -}}
+  <footer class="post-footer">
+    {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }}
+    <ul class="post-tags">
+      {{- range ($.GetTerms $tags) }}
+      <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
+      {{- end }}
+    </ul>
+    
+    {{- if (and site.Params.ShowShareButtons (ne .Params.disableShare true)) }}
+    {{- partial "share_icons.html" . -}}
+    {{- end }}
+  </footer>
+
+  {{- if (.Param "comments") }}
+  {{- partial "comments.html" . }}
+  {{- end }}
+</article>
+
+{{- end }}{{/* end main */}}
