--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -28,6 +28,35 @@
 .dark {
 } */
 
+body {
+  font-family: 'Noto Sans JP', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* 半角文字のフォント */
+body * {
+  font-family: 'Roboto', sans-serif; 
+  font-weight: normal;
+  font-style: normal;
+}
+
+strong {
+  font-weight: bold; /* 親要素で通常の太さを指定 */
+}
+
+code, pre {
+  font-family: 'Monaco', 'Consolas', 'Courier New', monospace;
+  font-weight: normal; /* 親要素で通常の太さを指定 */
+  font-style: normal;
+}
+
+.chroma {
+  font-family: 'Monaco', 'Consolas', 'Courier New', monospace;
+  font-weight: normal; /* 親要素で通常の太さを指定 */
+  font-style: normal;
+}
+
 /* 本文の line-height (default: 1.6) */
 .post-content {
   line-height: 1.8;
@@ -45,17 +74,16 @@ h3,
 h4,
 h5,
 h6 {
-  line-height: 1.4;
+  line-height: 1.4; /* default: 1.2-1.3 */
+  font-weight: bold; /* 見出しは太字 */
 }
 
-/* default: 1.3 */
 .entry-header h2 {
-  line-height: 1.4;
+  line-height: 1.4; /* default: 1.3 */
 }
 
-/* default: 1.3 */
 .first-entry .entry-header h1 {
-  line-height: 1.4;
+  line-height: 1.4; /* default: 1.3 */
 }
 
 /* post-single.css */
