--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -108,28 +108,29 @@ h6 {
 }
 
 .post-content h3 {
-  font-size: 24px;
+  /* font-size: 24px; */
+  font-size: 28px;
   /* margin: 24px 0 16px; */
-  margin: 50px 0 20px;
+  margin: 45px 0 20px;
 }
 
 .post-content h4 {
   /* font-size: 16px; */
-  font-size: 18px;
+  font-size: 20px;
   /* margin: 24px 0 16px; */
   margin: 30px 0 16px;
 }
 
 .post-content h5 {
   /* font-size: 14px; */
-  font-size: 16px;
+  font-size: 18px;
   /* margin: 24px 0 16px; */
   margin: 26px 0 16px;
 }
 
 .post-content h6 {
   /* font-size: 12px; */
-  font-size: 14px;
+  font-size: 16px;
   margin: 24px 0 16px;
 }
 
