--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -94,9 +94,19 @@ h6 {
 
 .first-entry .entry-header h1 {
   line-height: 1.4; /* default: 1.3 */
+  font-size: 35px !important;
+  margin: 0px auto 0px !important; /* 上部, 左右, 下部 */
+  /* padding-bottom: 0px !important; */
 }
 
 /* post-single.css */
+
+h1 {
+  margin: 0px auto 0px !important; /* 上部, 左右, 下部 */
+  font-size: 35px !important;
+  /* padding-bottom: 0px; */
+}
+
 /* post contents の H2 に border を引く */
 .post-content h2 {
   /* auto は width が設定されると左右中央揃えになる */
