--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -95,15 +95,17 @@ h6 {
 .first-entry .entry-header h1 {
   line-height: 1.4; /* default: 1.3 */
   font-size: 35px !important;
-  margin: 0px auto 0px !important; /* 上部, 左右, 下部 */
+   /* 上部, 左右, 下部 */
+  /* margin: 0px auto 0px !important; */
   /* padding-bottom: 0px !important; */
 }
 
 /* post-single.css */
 
 h1 {
-  margin: 0px auto 0px !important; /* 上部, 左右, 下部 */
   font-size: 35px !important;
+  /* 上部, 左右, 下部 */
+  /* margin: 0px auto 0px !important; */
   /* padding-bottom: 0px; */
 }
 
