--- a/layouts/shortcodes/k100/title.html
+++ b/layouts/shortcodes/k100/title.html
@@ -7,10 +7,10 @@
 {{- $t := $title -}}
 {{- with .Get 0 -}}
   {{- if eq . "s" -}}
-    {{- $t = printf "%s%s (%s)" $rsql $title $editionS -}}
+    {{/*  {{- $t = printf "%s%s (%s)" $rsql $title $editionS -}}  */}}
+    {{- $t = printf "%s%s" $rsql $title -}}
   {{- else -}}
     {{- $t = printf "%s%s (%s)" $rsql $title $editionA -}}
   {{- end -}}
 {{- end -}}
-
 {{- $t -}}
