--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -18,6 +18,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans+Mono:wght@400;700&family=Roboto+Mono:ital,wght@0,400;700;1,400;700&display=swap" rel="stylesheet">
 */}}
 
+{{/*  font awesome  */}}
+{{/*  <link rel="stylesheet" href="awesome/css/all.css">  */}}
+{{/*  <link rel="stylesheet" href="{{ '/awesome/css/all.css' | relURL }}">  */}}
+
+<link rel="stylesheet" href="{{ "awesome/css/all.css" | relURL }}">
+
 {{/*  style を適用する type の配列  */}}
 {{
   $arrayType := slice "testglossary" "<other-type-string>"
