--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -237,13 +237,26 @@ blockquote.alert {
   line-height: 1.5;
 } */
 
+.alert-heading {
+  margin-bottom: 0.4em !important; /* 下部マージンを指定 */
+}
+
 /* 各アラートタイプに応じた border-left のスタイル */
 .alert-note {
   border-left: 5px solid #2196f3 !important; /* 青 */
 }
 
-.alert-warning {
-  border-left: 5px solid #ff9800 !important; /* オレンジ */
+.alert-note .fa-circle-info {
+  color: #2196f3 !important;
+}
+
+.alert-tip {
+  /* border-left: 5px solid #afc300 !important; */
+  border-left: 5px solid #60C000 !important;
+}
+
+.alert-tip .fa-lightbulb {
+  color: #60C000 !important;
 }
 
 .alert-important {
@@ -251,13 +264,21 @@ blockquote.alert {
   border-left: 5px solid #9560f0 !important;
 }
 
-.alert-caution {
+.alert-important .fa-circle {
+  color: #9560f0 !important;
+}
+
+.alert-warning {
+  /* border-left: 5px solid #ff9800 !important; */
   border-left: 5px solid #ff5722 !important; /* サーモン */
 }
 
-.alert-tip {
-  /* border-left: 5px solid #8bc34a !important; */
-  border-left: 5px solid #afc300 !important;
+.alert-warning .fa-triangle-exclamation {
+  color: #ff5722 !important;
+}
+
+.alert-caution {
+  border-left: 5px solid #ff5722 !important; /* サーモン */
 }
 
 /* 関連記事 */
