--- a/layouts/_default/_markup/render-blockquote.html
+++ b/layouts/_default/_markup/render-blockquote.html
@@ -9,24 +9,25 @@
 {{ $class := dict
   "note" (printf "class=%q" "fa-solid fa-circle-info")
   "tip" (printf "class=%q" "fa-solid fa-lightbulb")
-  "important" (printf "class=%q" "fa-solid fa-circle")
+  "important" (printf "class=%q" "fa-solid fa-circle-exclamation")
   "warning" (printf "class=%q" "fa-solid fa-triangle-exclamation")
 }}
 
-{{ if eq .Type "alert" }}
-  <blockquote class="alert alert-{{ .AlertType }}">
+{{- if eq .Type "alert" -}}
+  <blockquote class="alert alert-common alert-{{- .AlertType -}}">
     <p class="alert-heading">
-      <i {{ printf "%s" (index $class .AlertType) | safeHTMLAttr }}></i>
-      {{ with .AlertTitle }}
-        {{ . }}
-      {{ else }}
-        {{ or (i18n .AlertType) (title .AlertType) }}
-      {{ end }}
+      <i {{ printf "%s" (index $class .AlertType) | safeHTMLAttr -}}></i>
+      {{ printf " " }}
+      {{- with .AlertTitle -}}
+        {{- . -}}
+      {{- else -}}
+        {{- or (i18n .AlertType) (title .AlertType) -}}
+      {{- end -}}
     </p>
-    {{ .Text }}
+    {{- .Text -}}
   </blockquote>
-{{ else }}
+{{- else -}}
   <blockquote>
     {{ .Text }}
   </blockquote>
-{{ end }}
+{{- end -}}
