--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -227,15 +227,15 @@ iframe {
 } */
 
 /* アラート全体のスタイル */
-/* 
 blockquote.alert {
-  padding: 1em;
-  margin: 1em 0;
-  background-color: #f9f9f9;
-  border-radius: 4px;
-  font-size: 1rem;
-  line-height: 1.5;
-} */
+  padding-left: 10pt;
+  margin-top: 1.6em;
+  margin-bottom: 1.6em;
+  /* background-color: #f9f9f9; */
+  /* border-radius: 4px; */
+  /* font-size: 1rem; */
+  /* line-height: 1.5; */
+}
 
 .alert-heading {
   margin-bottom: 0.4em !important; /* 下部マージンを指定 */
@@ -264,7 +264,7 @@ blockquote.alert {
   border-left: 5px solid #9560f0 !important;
 }
 
-.alert-important .fa-circle {
+.alert-important .fa-circle-exclamation {
   color: #9560f0 !important;
 }
 
