--- a/layouts/_default/_markup/render-blockquote.html
+++ b/layouts/_default/_markup/render-blockquote.html
@@ -1,22 +1,51 @@
-{{/*  "note" "fa-solid fa-circle-info fa-lg"  */}}
-{{/* $class := dict
-  "note" (printf "class=%q style=\"color: %s;\"" "fa-solid fa-circle-info" "#2196f3")
-  "tip" (printf "class=%q style=\"color: %s;\"" "fa-solid fa-lightbulb" "#60C000")
-  "important" (printf "class=%q style=\"color: %s;\"" "fa-solid fa-circle" "#9560f0")
-  "warning" (printf "class=%q style=\"color: %s;\"" "fa-solid fa-triangle-exclamation" "#ff5722")
+{{/*  
+ノート
+<i class="fa-solid fa-circle-info"></i>
+<i class="fa-solid fa-info"></i>
+
+ヒント
+<i class="fa-solid fa-lightbulb"></i>
+<i class="fa-regular fa-lightbulb"></i>
+
+Warnning
+<i class="fa-solid fa-triangle-exclamation"></i>
+<i class="fa-solid fa-exclamation"></i>
+<i class="fa-solid fa-bell"></i>
+
+重要
+<i class="fa-solid fa-circle-exclamation"></i>
+<i class="fa-solid fa-circle"></i>
+<i class="fa-regular fa-circle"></i>
+<i class="fa-solid fa-star"></i>
+
+etc
+<i class="fa-solid fa-message"></i>
+<i class="fa-regular fa-message"></i>
+<i class="fa-solid fa-comment"></i>
+<i class="fa-regular fa-comment"></i>
+<i class="fa-solid fa-comment-dots"></i>
+<i class="fa-regular fa-comment-dots"></i>
+<i class="fa-solid fa-note-sticky"></i>
+<i class="fa-regular fa-note-sticky"></i>
+<i class="fa-solid fa-square-check"></i>
+<i class="fa-regular fa-square-check"></i>
+<i class="fa-solid fa-circle-check"></i>
+<i class="fa-regular fa-circle-check"></i>
 */}}
 
-{{ $class := dict
-  "note" (printf "class=%q" "fa-solid fa-circle-info")
-  "tip" (printf "class=%q" "fa-solid fa-lightbulb")
-  "important" (printf "class=%q" "fa-solid fa-circle-exclamation")
-  "warning" (printf "class=%q" "fa-solid fa-triangle-exclamation")
+{{ $dictClass := dict
+  "note" "fa-solid fa-circle-info"
+  "tip" "fa-solid fa-lightbulb"
+  "important" "fa-solid fa-circle-exclamation"
+  "warning" "fa-solid fa-triangle-exclamation"
 }}
 
 {{- if eq .Type "alert" -}}
+  {{ $class := index $dictClass .AlertType }}
+  {{ $s := printf "class=%q" $class }}
   <blockquote class="alert alert-common alert-{{- .AlertType -}}">
     <p class="alert-heading">
-      <i {{ printf "%s" (index $class .AlertType) | safeHTMLAttr -}}></i>
+      <i {{ printf "%s" $s | safeHTMLAttr -}}></i>
       {{ printf " " }}
       {{- with .AlertTitle -}}
         {{- . -}}
