--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,21 +1,23 @@
 /* PaperMod の配色変更 */
 :root {
-  --base-font-size: 16px;
+  --base-font-size: 16.5px;
 /* --code-bg: rgb(245, 245, 245); */
 /* --code-bg: #F5F5F5; */
 /* --code-bg: #F0F5FF; */
 /* --code-bg: #F0FCFF; */
 /* --code-bg: #F4FCFF; */
-/* --code-bg: #ECF6FF; */
+  /* --code-bg: #ECF6FF; */
   --code-bg: #F0F8FF;
   /* --primary: rgb(30, 30, 30); */
   /* --primary: rgb(80, 80, 110); */
   /* --primary: rgb(75, 75, 100); */
-  --primary: rgb(40, 40, 60);
-  /* --content: rgb(31, 31, 31); */
+  /* --primary: rgb(40, 40, 60); */
+  --primary: rgb(30, 30, 50);
+  --content: rgb(31, 31, 31);
   /* --content: rgb(85, 85, 85); */
-  --content: rgb(55, 55, 55);
-  /* --theme: rgb(255, 255, 255);
+  /* --content: rgb(55, 55, 55); */
+  /* --content: rgb(40, 40, 40); */
+    /* --theme: rgb(255, 255, 255);
   --entry: rgb(255, 255, 255);
   --primary: rgb(30, 30, 30);
   --secondary: rgb(108, 108, 108);
@@ -33,7 +35,8 @@ body {
   /* font-family: 'Noto Sans JP', sans-serif; */
   font-family: 'Noto Sans JP', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: var(--base-font-size);
-  line-height: 1.6;
+  /* line-height: 1.6; */
+  line-height: 1.8;
   font-weight: normal;
   font-style: normal;
 }
@@ -77,11 +80,12 @@ code {
 
 /* 本文の line-height (default: 1.6) */
 .post-content {
-  line-height: 1.8;
+  /* line-height: 1.8; */
+  line-height: 2em;
 }
 
 .entry-content {
-  line-height: 1.8;
+  line-height: 2em;
 }
 
 /* post-entry.css */
@@ -92,16 +96,20 @@ h3,
 h4,
 h5,
 h6 {
-  line-height: 1.4; /* default: 1.2-1.3 */
+   /* default: 1.2-1.3 */
+  /* line-height: 1.4; */
+  line-height: 1.5;
   font-weight: bold; /* 見出しは太字 */
 }
 
 .entry-header h2 {
-  line-height: 1.4; /* default: 1.3 */
+  /* default: 1.3 */
+  line-height: 1.4;
 }
 
 .first-entry .entry-header h1 {
-  line-height: 1.4; /* default: 1.3 */
+  /* default: 1.3 */
+  line-height: 1.4;
   /* font-size: 35px !important; */
   font-size: calc(var(--base-font-size) * 2.25) !important;
    /* 上部, 左右, 下部 */
@@ -302,7 +310,7 @@ blockquote.alert {
 .related-posts li {
   /* font-size: 12pt; */
   font-size: calc(var(--base-font-size) * 1.0);
-  margin: 1pt 0;
+  margin: 2pt 0;
   /* margin-bottom: 2pt; */
 }
 
