--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -107,6 +107,10 @@ h6 {
   line-height: 1.4;
 }
 
+.first-entry .entry-content {
+  font-size: calc(var(--base-font-size) * 1.0);
+}
+
 .first-entry .entry-header h1 {
   /* default: 1.3 */
   line-height: 1.4;
