--- a/layouts/partials/k100/afilink-book-amazon.html
+++ b/layouts/partials/k100/afilink-book-amazon.html
@@ -1,14 +1,20 @@
+{{ $id := "ds100kdp" }} 
+{{ $platform := "amazon" }}
+{{ $type := "afiurl" }}
 {{- $context := .context -}}
-{{- $url := $context.Site.Params.k100.afiurl.book.amazon -}}
-{{- $bt := $context.Site.Params.k100dp.book.title -}}
-<a href="{{ $url }}" target="_blank" rel="noopener noreferrer">
-  {{- with .text -}}
-    {{- if ne (trim . "") "" -}}
-      {{- . -}}
-    {{- else -}}
-      {{- $bt -}}
-    {{- end -}}
-  {{- else -}}
-    {{- $bt -}}
-  {{- end -}}
-</a>
+
+{{/*  {{ with index site.Params.products (lower $id) }}  */}}
+{{ with index $context.Site.Params.products (lower $id) }}
+  {{ $name := .name }}
+  {{ with index . $platform }}
+    {{ with index . $type }}
+      <a href="{{- . -}}" target="_blank">{{- $.text | default $name -}}</a>
+    {{ else }}
+      {{ errorf "%q shortcode: type '%s' not found." $.Name $type }}
+    {{ end }}
+  {{ else }}
+    {{ errorf "%q shortcode: platform '%s' not found." $.Name $platform }}
+  {{ end }}
+{{ else }}
+  {{ errorf "The %q shortcode was unable to find %q. See %s" .Name $id .Position }}
+{{ end }}
