--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -31,6 +31,14 @@
 .dark {
 } */
 
+.list {
+  background: var(--code-bg);
+}
+
+.dark.list {
+  background: var(--theme);
+}
+
 body {
   /* font-family: 'Noto Sans JP', sans-serif; */
   font-family: 'Noto Sans JP', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
