--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -35,9 +35,20 @@
 
 /* ダークモードで変数の設定 */
 .dark {
+  /* 
+  --theme: rgb(29, 30, 32);
+  --entry: rgb(46, 46, 51);
+  --primary: rgb(218, 218, 219);
+  --secondary: rgb(155, 156, 157);
+  --tertiary: rgb(65, 66, 68);
+  --content: rgb(196, 196, 197);
+  --code-block-bg: rgb(46, 46, 51);
+  --code-bg: rgb(55, 56, 62);
+  --border: rgb(51, 51, 51);
+   */
   /* alerts */
-  --alert-bg-color: #2e2e2e; /* ダーク背景 */
-  --alert-text-color: #f1f1f1; /* 明るいテキスト色 */
+  --alert-bg-color: var(--entry); /* ダーク背景 */
+  --alert-text-color: var(--content); /* 明るいテキスト色 */
   --alert-color-blue: #64b5f6; /* 明るい青 */
   --alert-color-green: #a2e57b; /* 明るい緑 */
   --alert-color-purple: #b39ddb; /* 明るい紫 */
